--- a/CV.html
+++ b/CV.html
@@ -60,7 +60,7 @@
       <div class="slider__slides">
         <div class="slider__slide active">
           <p class="starter-text"><strong>Launch for the sky!</strong></p>
-          <p class="starter-text2"><em>Aiming low is not an option for me</em></p>
+          <p class="starter-text2"><em>Aim high and never give up!</em></p>
           <div>
             <picture><img src="CV/rocket.jpg" class="CV-img"></picture>
           </div>
@@ -68,7 +68,7 @@
 
         <div class="slider__slide">
           <p class="starter-text"><strong>I am a team player.</strong></p>
-          <p class="starter-text2"><em>Let me help you with your problems</em></p>
+          <p class="starter-text2"><em>Teamwork makes the dream work!</em></p>
           <div>
             <picture><img src="CV/teamwork.jpg" class="CV-img"></picture>
           </div>
@@ -102,15 +102,15 @@
         </div>
         <div class="strengths-info-text">Financial Analysis</div>
         <div class="strengths-info-text2">Stuck between two business decisions?</div>
-        <div class="strengths-info-text3">Let me help you with my analysis.</div>
+        <div class="strengths-info-text3">Let's deep dive into the numbers together.</div>
       </div>
       <div class="strengths-info-block">
         <div>
           <picture><img src="CV/data.jpg"></picture>
         </div>
-        <div class="strengths-info-text">Data Visualisation</div>
+        <div class="strengths-info-text">Data Analytics</div>
         <div class="strengths-info-text2">Can't figure out where the problem lies in?</div>
-        <div class="strengths-info-text3">I'll visualize it in simple charts for you.</div>
+        <div class="strengths-info-text3">Let's review the data sets for anomalies.</div>
       </div>
       <div class="strengths-info-block">
         <div>
@@ -118,7 +118,7 @@
         </div>
         <div class="strengths-info-text">Strategic Planning</div>
         <div class="strengths-info-text2">Have a long-term goal in mind but uncertain of next step?</div>
-        <div class="strengths-info-text3">Let's discuss and formulate a plan together.</div>
+        <div class="strengths-info-text3">Let's formulate a business case together.</div>
       </div>
     </section>
     <section class="technical">
@@ -126,7 +126,7 @@
         <source src="CV/tech.mp4" type="video/mp4">
       </video>
       <div class="technical-text">
-        <div>Here is a list of my technical skills & use cases</div>
+        <div>List of my technical skills and output from my HTML CSS practices (remodelled webpages)</div>
       </div>
     </section>
     <section>
