--- a/index.html
+++ b/index.html
@@ -55,12 +55,11 @@
           <h1 class="heading-primary">
             Hello, Selamat Pagi, こんにちは, 你好!</h1>
           <p class="intro-description">
-            Nice to e-meet you! 👋 I'm Darius Koh, and I'm currently working as a Commercial Finance and FP&A Lead
-            with Siemens Healthineers in Indonesia. </p>
+            Nice to e-meet you, my name is Darius and welcome to my webpage!👋 Life is a learning journey and being an enthusiast of personal growth, I embarked on a journey to learn basic Web Development since 2022. </p>
           <p class="intro-description">
-            Life is a learning journey and being an enthusiast of personal growth, I embarked on a journey to learn basic Web Development since 2022. During my free time, I practise HTML & CSS coding by taking inspiration from corporate websites and remodelling them. You may find link to my works under the "CV" section. 😊</p>
+            My full-time profession is in Finance but during my free time, I will occasionally practise basic HTML & CSS coding. I do so by taking inspiration from corporate websites and remodelling them. You may find links to my works under the "CV" section. 😊</p>
           <p class="intro-description">
-            Please don't roast me if my webpage is distored or poorly formatted - I am still a newbie learning with trial and error.🥲 Nevertheless, if you have any ideas or recommendations to improve my site, let's connect on LinkedIn and chat together! ☕</p>
+            Please don't roast me if my webpage is distored or poorly formatted - I am still a newbie learning from trial and error.🥲 Nevertheless, if you have any ideas to improve my site (or finance job opportunities 😉), let's connect on LinkedIn and chat! ☕</p>
           <a class="linkedin" href="https://www.linkedin.com/in/darius-koh-yu-feng/" target="_blank""><strong>Find Me Here!</strong></a>
         </div>
         <div class=" intro-imgbox">
@@ -83,14 +82,14 @@
         <!-- 1st Hobby -->
         <div class="step-text-box">
           <h3 class="heading-tertiary">
-            Exercise & Keep Fit!
+            Exercise and sleep!
           </h3>
           <p class="step-description">
-            My routine includes weightlifting at least twice a week and I also go for a short jog every weekend.
-            Feel free to hit me up for a session together!
+            My routine used to include weightlifting and jogs at least twice a week.
+            But now that I'm approaching my 30s, it is already a miracle to weightlift once a week. 😉
           </p>
           <p class="step-description1">
-            <strong>Favourites</strong>: Bench Press, Pull-ups and Squats
+            <strong>Favourites</strong>: Bench Press and Lats pull down
           </p>
           <p class="step-description2">
             <strong>Most Hated</strong>: Long distance running 🙅‍♂️
@@ -122,12 +121,12 @@
               by HONEYCOMBERS</strong></a> -->
         </div>
         <div class="step-text-box">
-          <h3 class="heading-tertiary">Enjoy Yummy Food!</h3>
+          <h3 class="heading-tertiary">Makan yummy food!</h3>
           <p class="step-description">
-            My favourite food are Nasi Lemak, Prawn Noodles, Carbonara, Chirashi Don and many many more!
+            My favourite food are indomie, salted egg chicken and telur ceplok setengah matang. Not so healthy food, but very sedap hehe.
           </p>
           <p class="step-description1">
-            <strong>Favourite Hangout Spot</strong>: Bedok 85 Market
+            <strong>Favourite Hangout Spot</strong>: In Singapore: Bedok 85, In Indonesia: Citos
           </p>
           <p class="step-description2">
             <strong>Dislikes</strong>: Steamed Vegetables 🚫
@@ -136,10 +135,9 @@
 
         <!-- 3rd Hobby -->
         <div class="step-text-box">
-          <h3 class="heading-tertiary">Binge on Animes!</h3>
+          <h3 class="heading-tertiary">Stay home and be an Otaku!</h3>
           <p class="step-description">
-            Animes are relatable as it expresses vibrancy in its characters with dreams and goals.
-            Furthermore, the action and fight scenes are amazing!
+            Nothing beats resting, chilling at home over the weekends, catching up on animes and shows. 
           </p>
           <p class="step-description1">
             <strong>Personal Favourites</strong>: Overlord, Demon Slayer and Classroom of the Elite
@@ -158,7 +156,7 @@
 
     <section class="work" id="work">
       <h2 class="heading-secondary-work">
-        Work Experiences
+        Professional Experiences
       </h2>
 
       <div class="main">
