--- a/index.html
+++ b/index.html
@@ -258,12 +258,10 @@
             of my comfort zone and explore new opportunities.
           </p>
           <p class="step-description3">
-            I sincerely believe that as long as I am willing to strive for excellence and give it my best, I will
-            definitely become a stronger and more confident professional. 👨‍🏫
+            It is important to acknowledge that everybody fails at one time or another, but that doesn't make us "failures".
           </p>
           <p class="step-description3">
-            Regardless of success or failure, this is
-            already a big win for my personal development!
+            Things may not have worked out that time, but life goes on - we learn from the past and be better!  
           </p>
         </div>
 
