--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@
       <h2 class="heading-secondary-work">
         Professional Experiences
       </h2>
+      <h2 class="heading-secondary-work2">
+        Tap into the icons below for more info!
+      </h2>
 
       <div class="main">
         <div class="box">
