--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         Professional Experiences
       </h2>
       <h2 class="heading-secondary-work2">
-        Tap into the icons below for more info!
+        Tap on the icons below for more info!
       </h2>
 
       <div class="main">
