--- a/CV.html
+++ b/CV.html
@@ -153,6 +153,10 @@
             <p>Front-end Design</p>
           </div>
           <div class="technical-skills-blocks">
+            <div class="image"><span><img src="CV/Safari.png" alt=""></span></div>
+            <p><a href="Safari.html" target="_blank">Safari</a></p>
+          </div>
+          <div class="technical-skills-blocks">
             <div class="image"><span><img src="CV/umeat2.PNG" alt=""></span></div>
             <p><a href="uMeat.html" target="_blank">uMeat</a></p>
           </div>
