--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <p class="intro-description">
             Nice to e-meet you, my name is Darius and welcome to my webpage!👋 Life is a learning journey and being an enthusiast of personal growth, I embarked on a journey to learn basic Web Development since 2022. </p>
           <p class="intro-description">
-            My full-time profession is in Finance but during my free time, I will occasionally practise basic HTML & CSS coding. I do so by taking inspiration from corporate websites and remodelling them. You may find links to my works under the "CV" section. 😊</p>
+            My full-time profession is in Finance but during my free time, I will occasionally practise basic HTML & CSS coding. I do so by taking inspiration from corporate websites and remodelling them, as well as photoblogging my overseas trip experiences. You may find links to my works under the "CV" section. 😊</p>
           <p class="intro-description">
             Please don't roast me if my webpage is distored or poorly formatted - I am still a newbie learning from trial and error.🥲 Nevertheless, if you have any ideas to improve my site (or finance job opportunities 😉), let's connect on LinkedIn and chat! ☕</p>
           <a class="linkedin" href="https://www.linkedin.com/in/darius-koh-yu-feng/" target="_blank""><strong>Find Me Here!</strong></a>
