--- a/Benjamin Darker.html
+++ b/Benjamin Darker.html
@@ -411,7 +411,7 @@
       <p class="copyright">
       <p>Copyright &copy; <span class="year">2024</span> by Darius Koh Yu Feng.</p>
       <p>This page was inspired and remodelled after Benjamin Barker Singapore's corporate site and
-        this is the result of my personal practice. All rights and credits belong to Benjamin Barker Singapore.</p>
+        this is the result of my personal practice for educational purpose only. All rights and credits belong to Benjamin Barker Singapore.</p>
       <p>All image credits belong to <a href="https://www.pexels.com/" target="_blank">Pexels</a>.</p>
       </p>
     </div>
