--- a/GrubFood.html
+++ b/GrubFood.html
@@ -481,7 +481,8 @@
       <p class="copyright">
       <p>Copyright &copy; <span class="year">2024</span> by Darius Koh Yu Feng.</p>
       <p>This page was inspired and remodelled after Grab Singapore's corporate site and
-        this is the result of my personal practice. All rights and credits belong to Grab Singapore.</p>
+        this is the result of my personal practice for educational purpose only. All rights and credits belong to Grab Singapore.</p>
+        <p>All image credits belong to <a href="https://www.pexels.com/" target="_blank">Pexels</a>.</p>
       </p>
     </div>
   </div>
