--- a/Hahamove.html
+++ b/Hahamove.html
@@ -148,26 +148,26 @@
 
     <!-- SLIDER_NAV.CSS -->
     <section class="get-started">
-      <h1>PROMOTIONS</h1>
+      <h1>Always ready for you! 😉❤️</h1>
       <div class="slider_slides">
         <!-- 1ST SLIDER -->
         <div class="slider__slide active">
-          <img src="Hahamove/gallery/slider1.PNG">
+          <img src="Hahamove/gallery/slider1.jpg">
         </div>
 
         <!-- 2ND SLIDER -->
         <div class="slider__slide">
-          <img src="Hahamove/gallery/slider2.PNG">
+          <img src="Hahamove/gallery/slider2.jpg">
         </div>
 
         <!-- 3RD SLIDER -->
         <div class="slider__slide">
-          <img src="Hahamove/gallery/slider3.PNG">
+          <img src="Hahamove/gallery/slider3.jpg">
         </div>
 
         <!-- 4TH SLIDER -->
         <div class="slider__slide">
-          <img src="Hahamove/gallery/slider4.PNG">
+          <img src="Hahamove/gallery/slider4.jpg">
         </div>
 
         <!-- NAV ARROWS & BREADCRUMBS -->
@@ -385,7 +385,7 @@
       <p class="copyright">
       <p>Copyright &copy; <span class="year">2024</span> by Darius Koh Yu Feng.</p>
       <p>This page was inspired and remodelled after Lalamove Singapore's corporate site and
-        this is the result of my personal practice. All rights and credits belong to Lalamove Singapore.</p>
+        this is the result of my personal practice for educational purpose only. All rights and credits belong to Lalamove Singapore.</p>
       <p>All image credits belong to <a href="https://www.freepik.com/author/catalyststuff"
           target="_blank">Catalyststuff</a>
         & <a href="https://www.freepik.com/author/freepik" target="_blank">Freepik</a>.</p>
