--- a/Macrosoft.html
+++ b/Macrosoft.html
@@ -332,7 +332,7 @@
       <p class="copyright">
       <p>Copyright &copy; <span class="year">2024</span> by Darius Koh Yu Feng.</p>
       <p>This page was inspired and remodelled after Microsoft Singapore's corporate site and
-        this is the result of my personal practice. All rights and credits belong to Microsoft Singapore.</p>
+        this is the result of my personal practice for educational purpose only. All image rights and credits belong to Microsoft Singapore.</p>
       </p>
     </div>
   </div>
