--- a/NenjaVan.html
+++ b/NenjaVan.html
@@ -383,7 +383,7 @@
       <p class="copyright">
       <p>Copyright &copy; <span class="year">2024</span> by Darius Koh Yu Feng.</p>
       <p>This page was inspired and remodelled after Ninja Van Singapore's corporate site and
-        this is the result of my personal practice. All rights and credits belong to Ninja Van Singapore.</p>
+        this is the result of my personal practice for educational purpose only. All rights and credits belong to Ninja Van Singapore.</p>
       <p>All image credits belong to <a href="https://www.freepik.com/author/catalyststuff"
           target="_blank">Catalyststuff</a>
         & <a href="https://www.freepik.com/author/freepik" target="_blank">Freepik</a>.</p>
