--- a/uMeat.html
+++ b/uMeat.html
@@ -417,8 +417,7 @@
       </ul>
 
       <p class="copyright">
-        Copyright &copy; <span class="year">2024</span> by Darius Koh Yu Feng.
-        All rights reserved.
+        Copyright &copy; <span class="year">2024</span> by Darius Koh Yu Feng. This page was inspired and remodelled after Omnifood by Jonas Schmedtmann's web developer course. All rights reserved. 
       </p>
     </div>
   </div>
