--- a/Safari.html
+++ b/Safari.html
@@ -9,12 +9,16 @@
 
 <link rel="stylesheet" href="Parallax/style.css" />
 <link rel="stylesheet" href="Parallax/queries.css" />
+
+<script defer src="Parallax/apps.js"></script>
+<script defer src="Parallax/apps2.js"></script>
+
 </head>
 
 <body>
 
-  <div class="bgimg-1">
-    <div class="caption">
+  <div class="bgimg-1 hidden">
+    <div class="caption hidden">
     <span class="border">WELCOME TO THE SAFARI</span>
     </div>
   </div>
@@ -25,24 +29,24 @@
   </div>
 
   <div class="bgimg-2">
-    <div class="caption">
+    <div class="caption hidden">
     <span class="border">FEEL YOUR HEART BEAT RISE AS YOU ENTER THE SAFARI</span>
     </div>
   </div>
 
-  <div class="intro1">
+  <div class="intro1 gone">
     <h3 class="intro-header">TRULY UNIQUE AND MEMORABLE TRIP</h3>
     <p class="intro">Having visited South Africa as our honeymoon destination, this webpage serves as an album collection of our trip's photographs.</p>
   </div>
 
   <div class="bgimg-3">
-    <div class="caption">
+    <div class="caption hidden">
     <span class="border">KING OF THE SAVANNAH GREETS YOU WITH A MIGHTY ROAR</span>
     </div>
   </div>
 
   <div class="intro3">
-    <h3 class="intro-header">PHOTO GALLERY</h3>
+    <h3 class="intro-header hidden">PHOTO GALLERY</h3>
   </div>
 
   <section>
@@ -51,15 +55,15 @@
 
       <div class="wrapper">
         <div class="gallery">
-          <div class="image"><span><img src="Parallax/gallery/img1.jpeg" alt=""></span></div>
-          <div class="image"><span><img src="Parallax/gallery/img2.jpeg" alt=""></span></div>
-          <div class="image"><span><img src="Parallax/gallery/img3.jpeg" alt=""></span></div>
-          <div class="image"><span><img src="Parallax/gallery/img4.jpeg" alt=""></span></div>
-          <div class="image"><span><img src="Parallax/gallery/img5.jpeg" alt=""></span></div>
-          <div class="image"><span><img src="Parallax/gallery/img6.jpeg" alt=""></span></div>
-          <div class="image"><span><img src="Parallax/gallery/img7.jpeg" alt=""></span></div>
-          <div class="image"><span><img src="Parallax/gallery/img8.jpeg" alt=""></span></div>
-          <div class="image"><span><img src="Parallax/gallery/img9.jpeg" alt=""></span></div>
+          <div class="image gone"><span><img src="Parallax/gallery/img1.jpeg" alt=""></span></div>
+          <div class="image gone second"><span><img src="Parallax/gallery/img2.jpeg" alt=""></span></div>
+          <div class="image gone third"><span><img src="Parallax/gallery/img3.jpeg" alt=""></span></div>
+          <div class="image gone"><span><img src="Parallax/gallery/img4.jpeg" alt=""></span></div>
+          <div class="image gone second"><span><img src="Parallax/gallery/img5.jpeg" alt=""></span></div>
+          <div class="image gone third"><span><img src="Parallax/gallery/img6.jpeg" alt=""></span></div>
+          <div class="image gone"><span><img src="Parallax/gallery/img7.jpeg" alt=""></span></div>
+          <div class="image gone second"><span><img src="Parallax/gallery/img8.jpeg" alt=""></span></div>
+          <div class="image gone third"><span><img src="Parallax/gallery/img9.jpeg" alt=""></span></div>
         </div>
       </div>
 
