--- a/CV.html
+++ b/CV.html
@@ -157,6 +157,10 @@
             <p><a href="Safari.html" target="_blank">Safari</a></p>
           </div>
           <div class="technical-skills-blocks">
+            <div class="image"><span><img src="CV/weather.png" alt=""></span></div>
+            <p><a href="Weather.html" target="_blank">Weather App</a></p>
+          </div>
+          <div class="technical-skills-blocks">
             <div class="image"><span><img src="CV/umeat2.PNG" alt=""></span></div>
             <p><a href="uMeat.html" target="_blank">uMeat</a></p>
           </div>
