--- a/Weather.html
+++ b/Weather.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather Forecast</title>
     <link rel="stylesheet" href="Weather/style.css" />
+    <link rel="stylesheet" href="Weather/queries.css" />
     <script defer src="Weather/apps.js"></script>
   </head>
 
